--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,46 +4,21 @@
   box-sizing: border-box;
 }
 
-.fixeddiv {
+nav {
     position: fixed;
-    width: 100%
-
-}
-
-.logIC{
-    width: 100%;
-    height: 90px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-}
-
-
-.logIH{
-    
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-
-}
-
-.notLIC{
-    
     width: 100%;
     height: 68px;
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 40px;
+    justify-content: space-between; */
+    padding: 0 50px;
+    color: rgb(248, 247, 247);
+    /* background-color: black; */
     background-color: transparent;
-    color: white;
-    
 }
 
-.notLIH{
+.navContainer{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -52,15 +27,15 @@
     
 }
 
-.linksNLI{
-    width: 20%;
+.linksContainer{
+    width: 25%;
     display: flex;
     justify-content: space-between;
     
     
 }
 
-.linksNLI button{
+.linksContainer button{
     border: none;
     text-decoration: none;
     border-radius: 8px;
@@ -68,35 +43,49 @@
     cursor: pointer;
     font-family: sans-serif;
     background-color: transparent;
-    color: white;
+    color: rgb(248, 247, 247);
     font-weight: 900;
     letter-spacing: 1px;
     outline:none;
+    font-size: 13px;
+    
     
 
-    
 }
 
 .leftnavitems {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 45%;
+    justify-content: space-between;
 
 }
 
 .leftnavitems input{
-    height: 38px;
+    height: 30px;
+    width: 70%;
+    border-radius: 5px;
+    background-color: transparent;
+    color: rgb(248, 247, 247);
+    border-color: rgb(248, 247, 247);
+    border-style: solid;
+    padding-left: 10px;
+    font-size: 15px
+    
 
 }
 
-header{
-    /* padding-bottom: 60px; */
-    /* height: 300px */
+.leftnavitems input:focus{
+    /* background: white */
+    outline: none
 }
 
-header img{
-    /* height: 350px; */
-    margin-top: -160px;
-    width: 100%;
-   
+.leftnavitems input::placeholder{
+    color: rgb(248, 247, 247)
 }
+
+.leftnavitems input:focus::placeholder{
+    color: grey
+}
+
