edit user info (.put) is working,  route set up to specific product when clicked, product page recieves information (.get)

--- a/src/Components/Browse/Browse.css
+++ b/src/Components/Browse/Browse.css
@@ -22,7 +22,7 @@
 
 .browseHeader{
     height: 275px;
-    border: solid grey 1px;
+    /* border: solid grey 1px; */
     background-image: url(https://stockx-assets.imgix.net/headers/home_2.png?auto=compress%2Cformat);
     background-size: cover
 
