--- a/src/Components/LoginRegister/LoginRegister.css
+++ b/src/Components/LoginRegister/LoginRegister.css
@@ -1,5 +1,5 @@
 .loginHeader{
-    height:100px;
+    height:68px;
     width: 100%;
-    background-color: rgba(13, 14, 14, 0.904);
+    background-color: black
 }
