--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -13,6 +13,7 @@ nav {
     align-items: center;
     justify-content: space-between; */
     padding: 0 50px;
+    padding-top: 8px;
     color: rgb(248, 247, 247);
     /* background-color: black; */
     background-color: transparent;
@@ -20,6 +21,7 @@ nav {
 
 .navContainer{
     width: 100%;
+    height:50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -89,3 +91,8 @@ nav {
     color: grey
 }
 
+
+.leftnavitems img{
+    height:50px;
+    width: 50px;
+}
