--- a/src/Components/Browse/Browse.css
+++ b/src/Components/Browse/Browse.css
@@ -1,3 +1,10 @@
+.mainLanding {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .browseMainContainer{
     width: 100%;
     display: flex;
@@ -28,4 +35,21 @@
 
 }
 
+.browseProductsContainerRight{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap
+}
+
+.rowContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap
+}
 
