--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -19,8 +19,14 @@
     /* border: solid grey 1px; */
     background-image: url(https://stockx-assets.imgix.net/headers/home_2.png?auto=compress%2Cformat);
     background-size: cover;
-    color: white
-
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif */
+    font-family: 'Cantarell', sans-serif;
+    letter-spacing: 1.5px
 }
 
 .rowContainer {
@@ -28,9 +34,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding-top: 100px;
-    padding-left: 19%;
-    padding-right: 19%
+    padding-left: 15%;
+    padding-right: 19%;
 }
 
 .row{
@@ -74,13 +81,13 @@
 }
 
 .carouselPics{
-    height: 200px;
+    height: 150px;
     
     background-color: grey
 }
  
 .carouselPics img{
-    height: 200px
+    height: 150px;
 }
 
 .rowHeaderJ{
@@ -99,6 +106,8 @@
 }
 
 .rowHeaderJ p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
     
 }
 .rowHeaderN{
@@ -113,10 +122,12 @@
 .rowHeaderN img {
     height: 60px;
     width: 60px;
+
 }
 
 .rowHeaderN p{
-    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 .rowHeaderA{
@@ -135,6 +146,7 @@
 }
 
 .rowHeaderA p{
-    
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px
 }
 
