--- a/src/Components/LandingShoes/LandingShoes.css
+++ b/src/Components/LandingShoes/LandingShoes.css
@@ -12,7 +12,7 @@
     height: 250px;
     width: 250px;
     margin:0 30px;
-
+    text-align: center
 }
 
 .shoeTile img{
@@ -29,3 +29,23 @@
   height: 250px;
   width: 250px;
 }
+
+.shoeTile a {
+  text-decoration: none;
+}
+
+.shoeTile :nth-child(2) {
+  color: black;
+  height: 36px;
+  width:200px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900
+}
+
+.shoeTile :nth-child(3){
+  font-family: 'Roboto', sans-serif;
+
+  color: black;
+  font-size: 20px
+}
+
