add size to cart working, landing styling

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -12,6 +12,10 @@
     flex-direction: column;
 }
 
+.headerContainer {
+    
+}
+
 
 
 .landingHeader{
@@ -82,7 +86,6 @@
 
 .carouselPics{
     height: 150px;
-    
     background-color: grey
 }
  
