--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -5,7 +5,8 @@
 }
 
 nav {
-    position: fixed;
+    /* position: fixed; */
+    position: absolute;
     width: 100%;
     height: 68px;
     /* display: flex;
