--- a/src/Components/Browse/Browse.css
+++ b/src/Components/Browse/Browse.css
@@ -5,6 +5,18 @@
     
 }
 
+/* .browseHeader{
+    height: 275px;
+    background-image: url(https://stockx-assets.imgix.net/headers/home_2.png?auto=compress%2Cformat);
+    background-size: cover
+} */
+
+.browseHeader{
+    height:68px;
+    width: 100%;
+    background-color: black;
+}
+
 .browseMainContainer{
     width: 100%;
     display: flex;
@@ -12,33 +24,40 @@
 }
 
 .browseSideBarContainer{
-    width:20%;
-    height: 600px;
+    width:13%;
+    /* height: 600px; */
+    height: 91vh;
     display: flex;
     flex-direction: column;
-    background: green;
-    position: sticky
+    position: sticky;
+    background: white;
+    border: solid 1px rgb(168, 166, 166)
 }
 
 .browseSideBarContainer button{
-    width:25%;
-    height: 5vh;
+    width:100%;
+    height: 4rem;
     display: flex;
     flex-direction: column
 }
 
-.browseHeader{
-    height: 275px;
-    /* border: solid grey 1px; */
-    background-image: url(https://stockx-assets.imgix.net/headers/home_2.png?auto=compress%2Cformat);
-    background-size: cover
-
+.refineResults {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+
 .browseProductsContainerRight{
-    width: 80%;
+    width: 88%;
+    /* height: 100vh; */
     display: flex;
-    flex-wrap: wrap
+    flex-direction: column;
+    overflow-y:auto;
+    padding-top: 10px;
+    
 }
 
 .rowContainer {
@@ -47,9 +66,43 @@
     flex-wrap: wrap
 }
 
+.browseRowContainer {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    padding-top: 40px;
+}
+
 .row {
     width: 100%;
     display: flex;
     flex-wrap: wrap
 }
 
+/* .row{
+    width:100px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 15px;
+    border-top: solid 1px grey;  
+} */
+
+.browseSort {
+    width: 100%;
+    height: 50px;
+    
+}
+
+
+
+
+footer {
+    height: 80px;
+    width: 100%;
+    background-color: black;
+    color: white;
+}
