--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -33,7 +33,12 @@
     letter-spacing: 1.5px
 }
 
-.rowContainer {
+.landingHeader h1 {
+    margin: 0
+}
+
+
+.landingRowContainer {
     width:100%;
     display: flex;
     flex-direction: column;
