--- a/src/Components/Browse/Browse.css
+++ b/src/Components/Browse/Browse.css
@@ -24,34 +24,47 @@
 }
 
 .browseSideBarContainer{
-    width:13%;
+    width:14%;
     /* height: 600px; */
     height: 91vh;
     display: flex;
     flex-direction: column;
     position: sticky;
     background: white;
-    border: solid 1px rgb(168, 166, 166)
+    /* border: solid 1px rgb(168, 166, 166); */
+    padding-left: 20px;
 }
+
 
 .browseSideBarContainer button{
     width:100%;
     height: 4rem;
     display: flex;
-    flex-direction: column
+    flex-direction: row;
+    align-items: center
+
 }
 
 .refineResults {
     width: 100%;
-    height: 100px;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.categoryButton {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 25px
+}
+
+
 
 .browseProductsContainerRight{
-    width: 88%;
+    width: 87%;
     /* height: 100vh; */
     display: flex;
     flex-direction: column;
@@ -78,7 +91,8 @@
 .row {
     width: 100%;
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    
 }
 
 /* .row{
@@ -93,10 +107,87 @@
 
 .browseSort {
     width: 100%;
-    height: 50px;
-    
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding-left: 105px;
 }
 
+
+.toggledBrands {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%
+}
+
+
+.toggledBrands button {
+    height: 50px;
+    width: 50px;
+    background: white;
+    color: #666;
+    border-color: #f1e8e8;
+    margin: 12px 4.4px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    animation: .45s brand-Zoom;
+}
+
+
+
+  @keyframes brand-Zoom {
+    0% {
+        transform: scale(0);
+    } 
+    /* 50%{
+        transform: scale(.5)
+    } */
+    100% {
+        transform: none;
+    }
+  }
+
+.toggledBrands button img {
+    height: 25px;
+    width: 25px
+}
+.toggledBrands button:focus img {
+    height: 34px;
+    width: 34px;
+}
+
+
+.toggledBrands button:hover {
+    background: rgb(230, 228, 228)
+}
+
+
+
+.toggledBrands button:focus {
+    background: rgb(230, 228, 228);
+    color: black;
+    outline: none;
+    font-size: 17px;
+    font-weight: 600;
+    animation: .6s brandZoom;
+}
+
+  @keyframes brandZoom {
+    0% {
+        transform: scale(.5);
+    } 
+    /* 50%{
+        transform: scale(.5)
+    } */
+    100% {
+        transform: none;
+    }
+  }
 
 
 
@@ -106,3 +197,10 @@ footer {
     background-color: black;
     color: white;
 }
+
+
+
+
+
+
+
