--- a/src/Components/LoginRegister/LoginRegister.css
+++ b/src/Components/LoginRegister/LoginRegister.css
@@ -4,252 +4,260 @@
     background-color: black
 }
 
-/* * {
-	box-sizing: border-box;
-}
 
-.mainLogin {
-	background: #f6f5f7;
+
+.mainLoginContainer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
-	margin: -20px 0 50px;
 }
 
-.mainLogin h1 {
-	font-weight: bold;
+.loginSignupContainer {
+	height: 480px;
+	width: 480px;
+
+	background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    position: relative;
+    overflow: hidden;
+}
+
+.loginSignupTop {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 70px;
+	background: grey;
+	/* border-bottom-right-radius: 10px; */
+	/* border-bottom-left-radius: 10px */
+}
+
+.loginToggle {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50%;
+	border-right: solid 2px white;
+	/* border-top-right-radius: 10px; */
+	/* border-bottom-right-radius: 10px; */
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: white;
+	cursor: pointer;
+	/* transition: transform 80ms ease-in; */
+	/* height: 100%; */
+}
+
+/* .loginToggle:active {
+	transform: scale(0.95);
+} */
+
+.loginToggle:hover {
+	color: black;
+	transition-delay: .07s;
+	transition-duration: .7s;
+}
+
+.loginToggle:active{
+	font-size: 9px;
+}
+
+
+
+.loginToggle p {
+	
+	margin: 0;
+	
+}
+
+.signupToggle {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50%;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: white;
+	cursor: pointer;
+	/* border-left: solid 2px white; */
+	/* border-top-left-radius: 10px; */
+	/* border-bottom-left-radius: 10px; */
+	/* transition: transform 80ms ease-in;	 */
+}
+
+/* .signupToggle:active {
+	transform: scale(0.90);
+} */
+
+
+.signupToggle:hover {
+	color: black;
+	transition-delay: .07s;
+	transition-duration: .7s;
+}
+
+.signupToggle:active{
+	font-size: 9px;
+}
+
+
+
+.signupToggle p {
+	
 	margin: 0;
 }
 
-.mainLogin h2 {
-	text-align: center;
+.loginContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.mainLogin p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
+.loginInputs {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 300px;
+	padding-bottom: 35px;
 }
 
-.mainLogin span {
-	font-size: 12px;
+.loginInputs input {
+	height: 55px;
+	width: 330px;
+	margin-top: 25px;
+	font-size: inherit;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: solid 1.5px lightgray;
+	outline: none; 
+	font-family: 'Montserrat', sans-serif;
+	
 }
 
-.mainLogin a {
-	color: #333;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
+.loginInputs input::placeholder{
+	font-size: inherit;
+	font-family: 'Montserrat', sans-serif;
 }
 
-.mainLogin button {
+.loginInputs input:focus {
+  border-bottom: solid 2.5px rgba(0, 0, 0, 0.609);
+  transition-delay: .07s;
+  transition-duration: .7s;
+}
+
+
+.loginContainer button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 	transition: transform 80ms ease-in;
+	margin-top: -10px;
+	cursor: pointer;
 }
 
-button:active {
-	transform: scale(0.95);
+.loginContainer button:active {
+	transform: scale(0.90);
 }
 
-button:focus {
+.loginContainer button:focus {
 	outline: none;
 }
 
-button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
-}
 
-form {
-	background-color: #FFFFFF;
+
+
+.signupContainer {
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
+	justify-content: center;
+	align-items: center;
 }
 
-.mainLogin input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
+
+.signupContainer button {
+	border-radius: 20px;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+	transition: transform 80ms ease-in;
+	margin-top: 30px;
+	cursor: pointer;
 }
 
-.container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+.signupContainer button:active {
+	transform: scale(0.90);
 }
 
-.form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
+.signupContainer button:focus {
+	outline: none;
 }
 
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
+
+
+
+
+
+.signupInputs {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 300px;
 }
 
-.container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
-}
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
-}
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
+.signupInputs input {
+	height: 55px;
+	width: 330px;
+	margin-top: 25px;
+	font-size: inherit;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: solid 1.5px lightgray;
+	outline: none; 
+	font-family: 'Montserrat', sans-serif;
 	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
 }
 
-.overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
+.signupInputs input::placeholder{
+	font-size: inherit;
+	font-family: 'Montserrat', sans-serif;
 }
 
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
+.signupInputs input:focus {
+  border-bottom: solid 2.5px rgba(0, 0, 0, 0.609);
+  transition-delay: .07s;
+  transition-duration: 1s;
 }
 
-.overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.container.right-panel-active .overlay {
-  	transform: translateX(50%);
-}
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-	transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-	transform: translateX(0);
-}
-
-.overlay-right {
-	right: 0;
-	transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-	transform: translateX(20%);
-}
-
-.social-container {
-	margin: 20px 0;
-}
-
-.social-container a {
-	border: 1px solid #DDDDDD;
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
-}
-
-.mainLogin footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-.mainLogin footer p {
-    margin: 10px 0;
-}
-
-.mainLogin footer i {
-    color: red;
-}
-
-.mainLogin footer a {
-    color: #3c97bf;
-    text-decoration: none;
+/* .signupInputs :nth-child(4):focus {
+	font-size: 25px
 } */
+
+
+
+
+
+
+
+
+
+
+
+
