--- a/src/Components/Browse/Browse.css
+++ b/src/Components/Browse/Browse.css
@@ -24,7 +24,7 @@
 }
 
 .browseSideBarContainer{
-    width:14%;
+    width:200px;
     /* height: 600px; */
     height: 91vh;
     display: flex;
@@ -32,26 +32,94 @@
     position: sticky;
     background: white;
     /* border: solid 1px rgb(168, 166, 166); */
+    padding-top: 65px;
     padding-left: 20px;
+    
 }
+
 
 
 .browseSideBarContainer button{
     width:100%;
-    height: 4rem;
+    height: 65px;
     display: flex;
     flex-direction: row;
-    align-items: center
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    
+}
+
+.allProducts {
+    margin-bottom: 10px;
+    height: 65px;
+    width: 150px;
+    background: white;
+    border: none;
+    cursor: pointer;
+    padding-left: 25px;
 
 }
 
+
+
+
+.browseSort {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 100px;
+}
+
+
+
 .refineResults {
-    width: 100%;
-    height: 120px;
+    display: flex;
+    justify-content: flex-start;
+    height: 40px;
+    width: 220px;
+    display: flex;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.sortBy {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 40px;
+    width: 290px;
 }
+
+.sortBy span {
+    margin-right: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12.5px
+}
+
+
+.sortBy button {
+    height: 30px;
+    font-family: 'Montserrat', sans-serif;
+    margin-right: 5px;
+    cursor: pointer;
+    background: white;
+    border: none;
+    font-size: 12px
+}
+
+.sortBy button:hover {
+    outline: none;
+    color: black;
+    font-weight: 900;
+
+}
+.sortBy button:focus {
+    outline: none;
+    color: black;
+    font-weight: 900;
+
+}
+
 
 .categoryButton {
     display: flex;
@@ -119,17 +187,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%
+    width: 100%;
+    padding-left: 7px
 }
 
 
 .toggledBrands button {
-    height: 50px;
-    width: 50px;
+    height: 48px;
+    width: 48px;
     background: white;
     color: #666;
     border-color: #f1e8e8;
-    margin: 12px 4.4px;
+    margin: 12px 3px;
     border-radius: 4px;
     display: flex;
     justify-content: center;
