--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -10,7 +10,8 @@
     font-size: 20px;
     padding-left: 100px;
     padding-top: 30px;
-    margin-bottom: 30px
+    margin-bottom: 30px;
+    font-family: 'Montserrat', sans-serif
 }
 
 .cartPage {
@@ -31,23 +32,26 @@
     padding-left: 20px;
     border-bottom: solid 1px grey;
     padding-right: 20px;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
 .cartItemsHeader p {
     width: 181px;
+    font-weight: 600
 }
 
 
 .cartItemsHeader :nth-child(2) {
     display: flex;
     justify-content: center;
-    padding-right: 63px;
+    padding-right: 58px;
+    
 }
 .cartItemsHeader :nth-child(3) {
     display: flex;
     justify-content: flex-end;
-    padding-right: 5px;
+    padding-right: 2px;
     
 }
 .cartItemsHeader :nth-child(4) {
@@ -78,6 +82,7 @@
     margin-bottom: 20px;
     border-bottom: solid 1px lightgrey;
     padding-right: 20px;
+    font-family: 'Montserrat', sans-serif
 }
 
 .cart-product {
@@ -115,6 +120,7 @@
     color: black;
     /* border-radius: 5px; */
     border: solid 1px lightgray;
+    font-family: 'Montserrat', sans-serif;
     
 }
 
@@ -187,12 +193,12 @@
 }
 
 .fa-trash-alt{
-    color: #FA9292;
+    color: #f53232;
     font-size: 20px
   }
 
 .single-cart-product i:hover{
-    color: rgb(248, 110, 110);
+    color: #d92b2b;
     font-size: 25px
   }
 
