--- a/src/Components/LandingShoes/LandingShoes.css
+++ b/src/Components/LandingShoes/LandingShoes.css
@@ -38,7 +38,7 @@
   color: black;
   height: 36px;
   width:200px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 900
 }
 
