--- a/src/Components/LoginRegister/LoginRegister.css
+++ b/src/Components/LoginRegister/LoginRegister.css
@@ -29,7 +29,7 @@
 	flex-direction: row;
 	width: 100%;
 	height: 70px;
-	background: grey;
+	background: rgba(165, 162, 162, 0.87);
 	/* border-bottom-right-radius: 10px; */
 	/* border-bottom-left-radius: 10px */
 }
@@ -153,8 +153,10 @@
 
 .loginContainer button {
 	border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    /* border: 1px solid #FF4B2B; */
+    border: 1px solid #da3535;
+    /* background-color: #FF4B2B; */
+    background-color: #d92b2b;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -187,8 +189,10 @@
 
 .signupContainer button {
 	border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    /* border: 1px solid #FF4B2B; */
+    border: 1px solid #d92b2b;
+    /* background-color: #FF4B2B; */
+    background-color: #d92b2b;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
