--- a/src/Components/Sneaker/Sneaker.css
+++ b/src/Components/Sneaker/Sneaker.css
@@ -33,8 +33,8 @@
 
 .sneakerRightMainContainer {
     
-    width: 50%;
-    padding-top: 50px;
+    width: 35%;
+    padding-top: 20px;
 }
 
 .sneakerTitle {
@@ -52,6 +52,9 @@
     
 }
 
+
+
+
 .sneakerTitle :nth-child(1) {
     margin: 0;
     font-family: 'Montserrat', sans-serif
@@ -65,6 +68,8 @@
 .sneakerTitle :nth-child(3) {
     
     font-family: 'Montserrat', sans-serif;
+    margin-top: 5px;
+    margin-bottom: 10px
 }
 
 
@@ -76,6 +81,8 @@
     border-left: black solid 1px;
     border-right: black solid 1px;
 }
+
+.sneakerSizeContainer :nth-child(1) {}
 
 .sneakerSizeTileContainer{
     display: flex;
@@ -166,10 +173,10 @@
     margin-top: 20px;
     border-radius: 20px;
     /* border: 1px solid #FF4B2B; */
-    border: 1px solid rgba(165, 162, 162, 0.87);
+    border: 1px solid #d92b2b;
     /* background-color: #FF4B2B; */
-    background-color: rgba(165, 162, 162, 0.87);
-    color: #FFFFFF;
+    background-color: #d92b2b;
+    color: white;
     font-size: 12px;
     font-weight: bold;
     /* padding: 12px 45px; */
@@ -193,11 +200,14 @@
 
 .sneakerDescriptionContainer {
     width: 100%;
-    padding-top: 30px;
+    padding-top: 10px;
     border-left: solid black 1px;
     border-right: solid black 1px;
     border-bottom: solid black 3px;
     margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 
@@ -210,25 +220,31 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     font-family: 900;
+    margin-top: 15px;
+    margin-bottom: 20px
     
 }
 
 .sneakerDescriptionContainer :nth-child(2) {
-    padding-left: 170px;
+    /* padding-left: 80px; */
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
 }
 
 .sneakerDescriptionContainer :nth-child(3) {
-    padding-left: 170px;
+    /* padding-left: 80px; */
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
 }
 
 .sneakerDescriptionContainer :nth-child(4) {
-    padding-left: 170px;
+    /* padding-left: 80px; */
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
+}
+
+.sneakerDescriptionContainer :nth-child(5) {
+    /* margin-bottom: 9px */
 }
 
 
