--- a/src/Components/BrowseShoes/BrowseShoes.css
+++ b/src/Components/BrowseShoes/BrowseShoes.css
@@ -16,7 +16,11 @@
     text-align: center
 }
 
-.browseShoeTile p {
+.browseShoeTile img:hover {
+	transform: scale(1.1);
+}
+
+/* .browseShoeTile p {
     animation: .6s shoezoom;
 }
 
@@ -24,13 +28,13 @@
     0% {
         transform: scale(.5);
     } 
-    /* 50%{
+    50%{
         transform: scale(.5)
-    } */
+    }
     100% {
         transform: none;
     }
-  }
+  } */
 
 
   
