--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -52,9 +52,11 @@ nav {
     outline:none;
     font-size: 13px;
     font-family: 'Montserrat', sans-serif;
-    
-    
 
+}
+
+.linksContainer :hover{
+    transform: scale(1.1);
 }
 
 .leftnavitems {
@@ -97,4 +99,8 @@ nav {
 .leftnavitems img{
     height:50px;
     width: 50px;
+}
+
+.leftnavitems img:hover{
+    transform: scale(1.1);
 }
